Fix card jumping when pressing share button in mobile view

--- a/index.css
+++ b/index.css
@@ -50,7 +50,6 @@ body {
 }
 
 .article__content {
-    padding: 2rem 2rem 1.25rem 2rem;
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
@@ -58,18 +57,22 @@ body {
 
 .article__title {
     font-size: 1rem;
+    padding: 2rem 2rem 0 2rem;
 }
 
 .article__description {
     font-weight: 500;
     color: var(--desaturated-dark-blue);
     line-height: 2.5ch;
+    padding: 0 2rem;
 }
 
 .article__author-content {
     display: flex;
     column-gap: 0.75rem;
     align-items: center;
+    padding: 1rem 2rem;
+
 }
 
 .article__author-avatar {
@@ -173,4 +176,5 @@ body {
     .article__title {
         font-size: 1.25rem;
     }
+
 }
